--- a/webgl.css
+++ b/webgl.css
@@ -1,16 +1,9 @@
-canvas {
-	border: 2px solid black;
-	background-color: black;
-	width: 100vw;
-	height: 100vh;
-	display: block;
-}
-
-video {
-	display: none;
-}
-
+@import url("https://webglfundamentals.org/webgl/resources/webgl-tutorials.css");
 body {
-	margin: 0;
-	overflow: hidden;
+  margin: 0;
+}
+canvas {
+  width: 100vw;
+  height: 100vh;
+  display: block;
 }
