--- a/webgl.css
+++ b/webgl.css
@@ -7,3 +7,85 @@ canvas {
   height: 100vh;
   display: block;
 }
+
+/* Split the screen in half */
+.splitBig {
+  height: 100%;
+  width: 60%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+/* Split the screen in half */
+.splitSmall {
+  height: 100%;
+  width: 40%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+/* Control the right side */
+.right {
+  right: 0;
+  background-color: #1A1A1A;
+}
+
+/* If you want the content centered horizontally and vertically */
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+/* If you want the content centered horizontally and vertically */
+.topright {
+  position: absolute;
+  top: 5%;
+  right: 10%;
+  text-align: center;
+}
+
+input[type=submit] {
+  width: 40%;
+  background-color: rgb(10, 87, 150);
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: rgb(42, 134, 209);
+}
+
+input[type=text]:focus {
+  background-color: lightblue;
+}
+.notError {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid rgb(10, 87, 150);
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+.error {
+  width: 67%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border:2px solid red;
+  border-radius: 4px;
+  box-sizing: border-box;
+  
+}
