--- a/webgl.css
+++ b/webgl.css
@@ -49,11 +49,9 @@ canvas {
   position: absolute;
   top: 5%;
   right: 10%;
-  text-align: center;
 }
 
 input[type=submit] {
-  width: 40%;
   background-color: rgb(10, 87, 150);
   color: white;
   padding: 14px 20px;
@@ -71,7 +69,7 @@ input[type=text]:focus {
   background-color: lightblue;
 }
 .notError {
-  width: 100%;
+  width: 50%;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
@@ -80,7 +78,7 @@ input[type=text]:focus {
   box-sizing: border-box;
 }
 .error {
-  width: 67%;
+  width: 50%;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
@@ -91,4 +89,8 @@ input[type=text]:focus {
 
 .white {
   color: antiquewhite;
+}
+.red {
+  color: red;
+  font-size: smaller;
 }
